# Musviz

./: CMakeLists.txt  Makefile  README.md  build.sh  musvis.cc  musviz.cc
music/Project.band/Alternatives/000/: DisplayState.plist  DisplayStateArchive  MetaData.plist  ProjectData
